[WFCORE-4517] Add back the --add-modules=java.se argument for modular environments.